<resources>
    <string-array name="app_authors">
        <item>Robin Genolet</item>
        <item>Julien Perrenoud</item>
        <item>Matthieu Girod</item>
        <item>Alain Milliet</item>
        <item>Nicolas Ritter</item>
        <item>Raphaël Steinmann</item>
        <item>Hugo Sbai</item>
        <item>Marion Sbai</item>
    </string-array>
    <string-array name="app_special_thanks">
        <item>Prof. James Larus</item>
        <item>Călin Iorgulescu</item>
        <item>Lukas Kellenberger</item>
        <item>Laura Perrenoud for the logo</item>
    </string-array>
    <string name="app_name">SmartMap</string>
    <string name="action_settings">Settings</string>
    <string name="action_showfriends">Show friends</string>
    <string name="app_id">305881779616905</string>
    <string name="title_activity_logged_in">LoggedInActivity</string>
    <string name="greet_user">Log In successful!</string>
    <string name="search_text">Search</string>
    <string name="add_friend">Add a friend</string>
    <string name="profile_text">Profile</string>
    <string name="friends_text">Friends</string>
    <string name="events_text">Events</string>
    <string name="filters_text">Filters</string>
    <string name="settings_text">Settings</string>
    <string name="about_text">About</string>
    <string name="logout_text">Logout</string>
    <string-array name="sideMenuElements">
        <item>@string/profile_text</item>
        <item>@string/friends_text</item>
        <item>@string/events_text</item>
        <item>@string/filters_text</item>
        <item>@string/settings_text</item>
        <item>@string/about_text</item>
        <item>@string/logout_text</item>
    </string-array>
    <string name="search_bar_hint">Search…</string>
    <string name="title_activity_map_fragment">MapFragment</string>
    <string name="no_search_result">No results</string>
    <string name="more_results">See More</string>
    <string name="address_output_string">%1$s %2$s %3$s</string>
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>
    <string name="latlng">Lat/Long:</string>
    <string name="address">Address:</string>
    <string name="connected">Client connected</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">        Illegal arguments: Latitude %1$.8f Longitude %2$.8f</string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">        Location update error. code %1$d message %2$s</string>
    <string name="location_update_missing_update">        Location update error. No incoming location.</string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services are available</string>
    <string name="request_location_updates_in_progress">        Can\'t request location updates, previous request hasn\'t finished</string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">        Received an unknown activity request code %1$d in onActivityResult.</string>
    <string name="title_activity_add_friend">Add a friend</string>
    <string name="welcome">W E L C O M E</string>
    <string name="loading_text">Logging in…</string>
    <string name="logo_description">logo</string>
    <string name="title_activity_pager">Friends</string>
    <string name="friend_list">Friend list</string>
    <string name="friends_invitations_list">Friend invitation list</string>
    <string name="title_activity_show_events">Events</string>
    <string name="ShowEventsCheckBoxMyEv">My events</string>
    <string name="ShowEventsCheckBoxNearMe">Near me</string>
    <string name="ShowEventsCheckBoxStatus">Ongoing</string>
    <string name="showEventsMenuNewEvent">Create a new event</string>
    <string name="show_event_on_the_map_button">Show on the map</string>
    <string name="show_event_on_the_map_loading">Opening event on the map…</string>
    <string name="show_event_cannot_retrieve_current_location">Your current location cannot be retrieved. Please try again!</string>
    <string name="show_event_details_button">See details</string>
    <string name="show_event_server_error">Couldn\'t fetch wished content from our server</string>
    <string name="show_event_loading_info">Loading information…</string>
    <string name="show_events_menu_refresh">Refresh</string>
    <string name="ten_letters">aaaaaaaaaa</string>
    <string name="show_event_default_seekbar_text">45 km</string>
    <string name="show_event_listview_description">listview</string>
    <string name="show_event_disabled_warning_title">Events disabled</string>
    <string name="show_event_disabled_warning_message">You have disabled events fetching in the settings.\nIf you want to see events, please set the max distance to fetch events to something else.</string>
    <string name="show_event_disabled_warning_button_goto_settings">Take me to the settings</string>
    <string name="show_event_disabled_warning_button_return_to_main">OK</string>
    <string name="symbol_km">km</string>
    <string name="events_list_item_adapter_event_live">Event is live!</string>
    <string name="events_list_item_adapter_today">Today</string>
    <string name="events_list_item_adapter_tomorrow">Tomorrow</string>
    <string name="events_list_item_adapter_ends_today_at">Ends today at</string>
    <string name="events_list_item_adapter_ends_tomorrow_at">Ends tomorrow at</string>
    <string name="events_list_item_adapter_starts">Starts</string>
    <string name="events_list_item_adapter_ends">Ends</string>
    <string name="events_list_item_adapter_from">from</string>
    <string name="events_list_item_adapter_to">to</string>
    <string name="events_list_item_adapter_near_with_first_uppercase">Near</string>
    <string name="event_info_title_text">Title</string>
    <string name="event_info_when_text">When</string>
    <string name="event_info_by_text">Created by</string>
    <string name="event_info_description_text">Description</string>
    <string name="event_info_where_text">Where</string>
    <string name="event_info_going_text">Attending</string>
    <string name="event_info_participants_text">Participants</string>
    <string name="title_activity_show_event_information">Show event</string>
    <string name="show_event_info_invite_friends_button">Invite friends</string>
    <string name="show_event_by">By</string>
    <string name="show_event_info_event_no_description">No Description given</string>
    <string name="participant_img_content_description">participant image</string>
    <string name="add_participant_failure">Failure while adding participants</string>
    <string name="add_participant_success">Successfully added participants</string>
    <string name="event_quit_success">Event left</string>
    <string name="event_quit_failure">Error while trying to quit event</string>
    <string name="event_going_success">Event joined</string>
    <string name="event_going_failure">Error while trying to join event</string>
    <string name="refresh_participants_network_error">Network Error while getting participants</string>
    <string name="refresh_participants_not_found">Couldn\'t find participants</string>
    <string name="event_info_delete_button">Delete event</string>
    <string name="event_info_toast_eventno_longer_exists">The event you are trying to see doesn\'t exist anymore, sorry.</string>
    <string name="error_client_side">An error occurred on our side, sorry :(</string>
    <string name="add_event_title_text">Title</string>
    <string name="add_event_when_text">When</string>
    <string name="add_event_where_text">Where</string>
    <string name="add_event_map_text">Click on the map to set location</string>
    <string name="add_event_what_text">What</string>
    <string name="title_activity_add_event">Create a new event</string>
    <string name="addEventEventName">Event name</string>
    <string name="addEventButtonCreateEvent">Done</string>
    <string name="addEventEndDate">End Date</string>
    <string name="addEventEndTime">End Time</string>
    <string name="addEventEventDate">Event is today!</string>
    <string name="addEventEventTime">Event is now!</string>
    <string name="addEventLatitude">Latitude</string>
    <string name="addEventLongitude">Longitude</string>
    <string name="addEventPlaceName">Name of the place</string>
    <string name="addEventDescription">Description (optional)</string>
    <string name="addEventButtonPickLocation">Set location</string>
    <string name="add_event_toast_event_cannot_end_before_starting">The event cannot end before it begins!</string>
    <string name="add_event_toast_event_end_cannot_be_in_past">The event\'s end cannot be in the past!</string>
    <string name="add_event_toast_not_all_fields_set">Cannot create event: please specify all fields!</string>
    <string name="add_event_toast_event_created">Event created!</string>
    <string name="add_event_toast_couldnt_retrieve_location">Sorry, couldn\'t get the location of your event. Please try again!</string>
    <string name="add_event_toast_couldnt_retrieve_location_name">Sorry, couldn\'t retrieve the name of your event\'s place. Please specify it manually.</string>
    <string name="add_event_toast_indication_long_click_map_to_create_event">Long click the map at the location of your event</string>
    <string name="add_event_toast_couldnt_create_event_server">Couldn\'t create your event. The error occurred on our server and we are sorry :(</string>
    <string name="add_event_toast_fields_bad_size">Couldn\'t create your event because at least one of the field was too short or too long.</string>
    <string name="title_activity_invite_friends">Select friends</string>
    <string name="invite_friend_send_button">Invite</string>
    <string name="user_information_picture_description">Profile Picture</string>
    <string name="remove_friend_button_text">Remove</string>
    <string name="block_switch">Block</string>
    <string name="show_on_map">Activate</string>
    <string name="switch_On">YES</string>
    <string name="switch_Off">NO</string>
    <string name="about_version">Version</string>
    <string name="about_all_rights_reserved">All rights reserved</string>
    <string name="about_special_thanks_to">Special thanks to</string>
    <string name="about_dev_by">Developed by</string>
    <string name="about_dummy_copyright">© 2014</string>
</resources>