<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_blue"
    tools:context="ch.epfl.smartmap.activities.AboutActivity" >

    <TextView
        android:id="@+id/about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullscreen_content"
        android:layout_centerHorizontal="true"
        android:text="@string/about_version" />

    <TextView
        android:id="@+id/about_all_rights_reserved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_copyright"
        android:layout_centerHorizontal="true"
        android:text="@string/about_all_rights_reserved" />

    <TextView
        android:id="@+id/about_dev_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_all_rights_reserved"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="14dp"
        android:text="@string/about_dev_by" />

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:textSize="45sp"
        android:text="@string/app_name" />

    <LinearLayout
        android:id="@+id/about_team_members_holder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_dev_by"
        android:gravity="center"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/about_thanks_holder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_thanks"
        android:gravity="center"
        android:orientation="vertical" >
    </LinearLayout>

    <TextView
        android:id="@+id/about_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/about_dummy_copyright" />

    <ImageView
        android:id="@+id/about_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_version"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/about_thanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_team_members_holder"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="15dp"
        android:text="@string/about_special_thanks_to" />

</RelativeLayout>