<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/show_event_header"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.epfl.smartmap.activities.ShowEventsActivity" >

    <CheckBox
        android:id="@+id/ShowEventsCheckBoxNearMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@android:id/list"
        android:layout_alignTop="@+id/ShowEventscheckBoxStatus"
        android:onClick="onCheckboxClicked"
        android:text="@string/ShowEventsCheckBoxNearMe" />

    <CheckBox
        android:id="@+id/ShowEventsCheckBoxMyEv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="onCheckboxClicked"
        android:text="@string/ShowEventsCheckBoxMyEv" />

    <CheckBox
        android:id="@+id/ShowEventscheckBoxStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ShowEventsCheckBoxMyEv"
        android:layout_alignBottom="@+id/ShowEventsCheckBoxMyEv"
        android:layout_centerHorizontal="true"
        android:onClick="onCheckboxClicked"
        android:text="@string/ShowEventsCheckBoxStatus" />

    <SeekBar
        android:id="@+id/showEventSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ShowEventsCheckBoxNearMe"
        android:enabled="false"
        android:progress="45" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/show_event_listview_description"
        android:tag="@+id/showEventsList" />

    <TextView
        android:id="@+id/showEventKilometers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@android:id/list"
        android:layout_below="@+id/showEventSeekBar"
        android:layout_marginLeft="14dp"
        android:text="@string/show_event_default_seekbar_text" />

</RelativeLayout>