<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    android:paddingBottom="@dimen/activity_user_information_bottom_margin"
    android:paddingLeft="@dimen/activity_user_information_side_margin"
    android:paddingRight="@dimen/activity_user_information_side_margin"
    android:paddingTop="@dimen/activity_user_information_top_margin"
    tools:context="ch.epfl.smartmap.activities.UserInformationActivity" >

    <RelativeLayout
        android:id="@+id/user_info_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="@drawable/div_background"
        android:paddingLeft="10dp"
        android:paddingTop="10dp" >

        <ImageView
            android:id="@+id/user_info_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/user_information_picture_description"
            android:src="@drawable/ic_default_user" />

        <TextView
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:id="@+id/user_info_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/user_info_picture"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/user_info_subtitles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_info_name"
            android:layout_toRightOf="@id/user_info_picture"
            android:textColor="@color/wallet_secondary_text_holo_dark" />
        
        <TextView
            android:id="@+id/user_info_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_info_subtitles"
            android:layout_toRightOf="@id/user_info_picture"
            android:textColor="@color/wallet_secondary_text_holo_dark" />

        <Switch
            android:id="@+id/user_info_follow_switch"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/user_info_picture"
            android:layout_marginRight="25sp"
            android:layout_marginBottom="10sp"
            android:onClick="followUnfollow"
            android:switchMinWidth="50dp"
            android:text="@string/follow_switch"
            android:textOff="NO"
            android:textOn="YES" />
        
        <Switch
            android:id="@+id/user_info_blocking_switch"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/user_info_follow_switch"
            android:layout_marginRight="25sp"
            android:switchMinWidth="50dp"
            android:text="@string/block_switch"
            android:textOff="NO"
            android:textOn="YES" />
        
    </RelativeLayout>
    
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true" 
        android:layout_width="150sp"
        android:layout_height="40sp"
        android:weightSum="2"
        android:layout_margin="10dp" >

        <Button
            android:id="@+id/user_info_remove_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/remove_friend_button_shape"
            android:onClick="displayDeleteConfirmationDialog"
            android:text="@string/remove_friend_button_text"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:drawableLeft="@drawable/ic_action_discard_white" />
        
    </LinearLayout>
</RelativeLayout>